--- a/styles/main.css
+++ b/styles/main.css
@@ -24,4 +24,24 @@ main {
 	clear: left;
 }
 
+main h1 {
+	font-size: 150%;
+}
+
+main h2 {
+	font-size: 130%;
+	color: #800000;
+}
+
+main h3 {
+	font-size: 105%;
+}
+
+a:focus, a:hover {
+	font-style: italic;
+}
+
+footer p {
+	text-align: center;
+}
 /* the styles for the footer */
