--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,10 @@ header img {
 	float: left;
 }
 
+.shadow {
+	text-shadow: 2px 2px 2px #800000;
+}
+
 header h2 {
 	font-size: 170%;
 	color: #800000;
